Refactor DeferredIndexChangeServiceImpl: extract SQL builders, add javadoc
Separate in-memory map manipulation from SQL statement generation by
extracting private helper methods. Add class-level documentation
explaining the single-instance lifecycle and why SQL is persisted
per-step rather than batched for crash recovery.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>